 9. If using Gtk2 >= 2.12, then respect the 'Gtk style scrollviews'
    setting.
10. Respect KDE's shade sorted list column setting.
11. When checking if app is firefox, check against 'firefox' as
    well as 'firefox-bin'
12. Fix background of non-selected flat tabs.
13. Fix tab coloured mouse-over when not rounded.
14. Add a QTC_STYLE env var - used to quickly test qtc_<name>.themerc
    files.

0.58
----
1. Add a config option for selection appearance - defaults to flat.
2. Fix entry fields and dark colour schemes.
3. Use background colour for disabled scrollbar buttons.
4. Make custom styles work under Qt4 as well.
5. Make 'slight' rounding more 'slight' -  as per pre-cairo version.
6. Help with temporary Gtk window beeing seen when QtCurve is
   configured with -DQTC_ADD_EVENT_FILTER=true
7. Fix memory leak - forgot to call cairo_destroy
8. Lighter menu separators.

0.57.1
------
1. Better arrows positions on scrollbar steppers B and C.

0.57
----
1. Modify defaults:
     Turn off shade menubar only of active window
     Set default button indicator to tint
2. Re-added option to highlight background of check/radio text on mouseover.
3. Use cairo for all drawing.
4. Highlight expander arrows on mouse over.

0.56.3
------
 1. Fix tabs on Firefox 3 beta4
 2. Fix slight re-draw errors with scrollbar slider.
 3. Nicer positioning of down/right scrollbar arrows.
 4. Fix colours of tinted default button.
 5. QTC_MODIFY_MOZILLA compile fix - thanks to Ben de Groot.
 6. Don't set sliders to flat just because appearance is flat.
 7. Map gtk-go-back-ltr, gtk-go-back-rtl, gtk-go-forward-ltr, and gtk-go-forward-rtl.
 8. Modify gtk-about and gtk-home KDE icons mappings.
 9. Fix checkbox shadow.
10. Dont allow Mozilla scrollbars to be disabled.

0.56.2
------
1. Use case-insesitive string compares when checking Qt and KDE config files.
2. Fix some issues wth Firefox 3beta4.
3. Fix mouse over for up spin button.