@@ -89,12 +89,6 @@ style "qtcurve-w2" = "qtcurve-default"
   ythickness = 2
 }
 
-style "qtcurve-w2b" = "qtcurve-default"
-{
-  xthickness = 2
-  ythickness = 3
-}
-
 style "qtcurve-tasklist" = "qtcurve-default"
 {
   xthickness = 5
@@ -140,11 +134,17 @@ style "qtcurve-separator" = "qtcurve-default"
   ythickness = 3
 }
 
+style "qtcurve-w0" = "qtcurve-default"
+{
+  xthickness = 0
+  ythickness = 0
+}
+
 class "*GtkWidget" style "qtcurve-default"
 class "*GtkNotebook" style "qtcurve-w2"
 class "*Button" style "qtcurve-h2"
 class "*GtkOptionMenu" style "qtcurve-h2"
-class "*GtkRange" style "qtcurve-w2b"
+class "*GtkRange" style "qtcurve-w2"
 class "*GtkMenu" style "qtcurve-w2"
 class "*GtkScrolledWindow" style "qtcurve-w2"
 class "*GtkViewport" style "qtcurve-w2"
@@ -156,14 +156,14 @@ class "*GtkFrame" style "qtcurve-w2"
 class "*GtkStatusbar" style "qtcurve-default"
 class "*GtkRadioButton" style "qtcurve-default"
 class "*GtkCheckButton" style "qtcurve-default"
-class "*GtkSpinButton" style "qtcurve-w2b"
+class "*GtkSpinButton" style "qtcurve-w2"
 widget_class "*.GtkMenuItem.*" style "qtcurve-default"
 widget_class "*.GtkAccelMenuItem.*" style "qtcurve-default"
 widget_class "*.GtkRadioMenuItem.*" style "qtcurve-default"
 widget_class "*.GtkCheckMenuItem.*" style "qtcurve-default"
 widget_class "*.GtkImageMenuItem.*" style "qtcurve-default"
 widget_class "*.GtkSeparatorMenuItem.*" style "qtcurve-separator"
-class "*GtkEntry" style "qtcurve-w2b"
+class "*GtkEntry" style "qtcurve-w2"
 widget_class "*.tooltips.*.GtkToggleButton" style "qtcurve-tasklist"
 widget_class "*Tree*GtkButton" style "qtcurve-default"
 widget_class "*List*GtkButton" style "qtcurve-default"
@@ -176,4 +176,6 @@ widget_class "*HandleBox*HBox*SPDesktopWidget" style "qtcurve-sptoolbar"
 widget_class "*HandleBox*SPButton" style "qtcurve-sptoolbarbutton"
 widget_class "*.SwtFixed.GtkCombo.GtkButton" style "qtcurve-swt-combo"
 widget_class "*.SwtFixed.GtkCombo.GtkEntry" style "qtcurve-swt-combo"
-widget_class "*Toolbar*Entry" style "qtcurve-w2b"
+widget_class "*Toolbar*Entry" style "qtcurve-w2"
+class "GtkComboBoxEntry" style "qtcurve-w0"
+widget_class "*.GtkComboBoxEntry.*Button" style "qtcurve-w0"
